[metadata]
name = microblog
summary = Microblog
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = esikachev
author-email = esikachov@gmail.com

[global]
setup-hooks = pbr.hooks.setup_hook

[entry_points]
console_scripts =
    start = microblog.run:run_app
